# multihypothesis_segmentation_tracking

./: .gitignore  .gitmodules  .rosinstall  CMakeLists.txt  LICENSE  README.md  architecture.dot  package.xml
ci/: Dockerfile  apt.txt  create_rosversions.sh  install_cgal.sh  install_octomap.sh  install_opencv.sh
config/: demo.rviz  manip.rviz  shape_completion.rviz
launch/: recording.launch
mps_msgs/: CMakeLists.txt  package.xml
mps_msgs/action/: ClusterRigidMotions.action  MatchFrameSegments.action  SegmentRGBD.action  TrackBBox.action
mps_msgs/msg/: AABBox2d.msg  ColorMap.msg  FlowVector.msg  IndexMap.msg  Segmentation.msg  SparseMatrix.msg  Video.msg  VoxelRegion.msg  VoxelSegmentation.msg
mps_msgs/srv/: SegmentGraph.srv
mps_simulation/: CMakeLists.txt  package.xml
mps_simulation/config/: manip.rviz
mps_simulation/include/mps_simulation/: GVDBVoxelizer.h  GazeboModel.h  GazeboModelState.h  SceneVoxelizer.h  loading.h  paths.h
mps_simulation/models/book_16/: model.sdf
mps_simulation/models/book_17/: model.sdf
mps_simulation/models/book_19/: model.sdf
mps_simulation/models/book_21/: model.sdf
mps_simulation/models/book_7/: model.sdf
mps_simulation/models/can_coke/: model.sdf
mps_simulation/src/mps_simulation/: GVDBVoxelizer.cpp  GazeboMocap.cpp  ROSVoxelizer.cpp  loading.cpp  paths.cpp
mps_simulation/test/system/: gazebo_mocap.cpp  gazebo_segmentation_gt.cpp
mps_simulation/test/system/config/: gazebo_controllers.yaml  gazebo_joint_state_controller.yaml
mps_simulation/worlds/: books_piled.world  concentrated_cans.world  cubes.world  experiment_food.world  experiment_world.world  interseg_table_car.world  interseg_table_food.world  interseg_table_new.world  singleBeer.world
mps_test/: CMakeLists.txt  package.xml
mps_test/config/: orbit_trajectory.yaml  scene.rviz  task_trajectories.yaml
mps_test/include/mps_test/: CPUPixelizer.h  GVDBVoxelizer.h  ROSVoxelizer.h  ScenePixelizer.h
mps_test/launch/: evaluate_experiment.launch  generate_gazebo_benchmark.launch
mps_test/scripts/: fake_trajectory_forwarder.py
mps_test/src/: gazebo_segmentation_gt.cpp  generate_gazebo_benchmark.cpp  occupancy_evaluation.cpp  segmentation_evaluation.cpp  test_occupancy_comparison.cpp
mps_test/src/mps_test/: CPUPixelizer.cpp  GVDBVoxelizer.cpp  ROSVoxelizer.cpp
mps_test_data/: .gitignore  CMakeLists.txt  package.xml
mps_voxels/: .rosinstall  CMakeLists.txt  architecture.dot  package.xml
mps_voxels/ci/: add_local_paths.sh  apt.txt  install_cgal.sh  install_octomap.sh  install_opencv.sh
mps_voxels/cmake/: mps_macros.cmake
mps_voxels/config/: demo.rviz  shape_completion.rviz
mps_voxels/docs/: INSTALL.rst
mps_voxels/include/mps_voxels/: AABB.h  Belief.hpp  CudaTracker.h  DisjointSetForest.hpp  Experiment.h  ExperimentDir.h  Indexes.h  JaccardMatch.h  LocalOctreeServer.h  MCMCTreeCut_impl.hpp  Manipulator.h  MotionModel.h  Object.h  ObjectActionModel.h  ObjectLogger.h  OccupancyData.h  OctreeMotionModel.h  Particle.h  ParticleFilter.h  PointT.h  ROI.h  Scene.h  SegmentationInfo.h  SegmentationTreeSampler.h  SensorHistorian.h  SiamTracker.h  TargetDetector.h  Tracker.h  Ultrametric.h  UniformRandomSelector.hpp  ValueTree.h  ValueTree_impl.hpp  VictorManipulator.h  Viterbi.hpp  VoxelRegion.h  colormap.h  graph_matrix_utils.h  graph_matrix_utils_impl.hpp  hacks.h  image_output.h  (+11 more)
mps_voxels/include/mps_voxels/logging/: DataLog.h  conversion.hpp  log_cv_mat.h  log_cv_roi.h  log_occupancy_data.h  log_scene.h  log_segmentation_info.h  log_sensor_history.h  log_siammask.h  log_voxel_region.h
mps_voxels/include/mps_voxels/parameters/: ParameterBlock.hpp  VoxelRegionBuilder.hpp
mps_voxels/include/mps_voxels/planning/: Action.h  Motion.h  MotionPlanner.h  State.h
mps_voxels/include/mps_voxels/util/: VoronoiTessellator.h  assert.h  casts.hpp  containers.hpp  geometry.h  macros.h  map_nearest.hpp  package_paths.h  samplers.h  vector_less_than.hpp
mps_voxels/include/mps_voxels/visualization/: dispersed_colormap.h  visualize_bounding_spheres.h  visualize_object.h  visualize_occupancy.h  visualize_voxel_region.h
mps_voxels/scripts/: filtering_evaluation.ipynb  histogram_matching.ipynb  histogram_matching.py  matlab_action_wrapper.py  spectral_graph_clustering.py  voxel_clustering.ipynb
mps_voxels/src/: demo_resample.cpp  demo_seg_sample.cpp  entropy.cpp  explorer.cpp  measurement_particle_factory.cpp  particle_filter_pipeline.cpp  particle_visualizer.cpp  shape_completion_manager.cpp  test_graph_segmentation.cpp  test_icp.cpp  test_object_action_model.cpp  test_occupancy_comparison.cpp  test_particle_filter.cpp  test_refinement.cpp  test_resample.cpp  test_segmentation_sampling.cpp  tracker.cpp
mps_voxels/src/mps_voxels/: AABB.cpp  CudaTracker.cpp  Experiment.cpp  ExperimentDir.cpp  JaccardMatch.cpp  LocalOctreeServer.cpp  Manipulator.cpp  MotionModel.cpp  ObjectActionModel.cpp  ObjectLogger.cpp  OccupancyData.cpp  OctreeMotionModel.cpp  Particle.cpp  ParticleFilter.cpp  ROI.cpp  Scene.cpp  SceneCut.cpp  SegmentationTreeSampler.cpp  SiamTracker.cpp  TargetDetector.cpp  Tracker.cpp  Ultrametric.cpp  ValueTree.cpp  VictorManipulator.cpp  VoxelRegion.cpp  colormap.cpp  graph_matrix_utils.cpp  hacks.cpp  image_output.cpp  image_utils.cpp  octree_utils.cpp  pointcloud_utils.cpp  segmentation_utils.cpp  shape_utils.cpp  video_graph.cpp  voxel_recombination.cpp
mps_voxels/src/mps_voxels/logging/: DataLog.cpp  log_cv_mat.cpp  log_cv_roi.cpp  log_occupancy_data.cpp  log_scene.cpp  log_segmentation_info.cpp  log_sensor_history.cpp  log_siammask.cpp  log_voxel_region.cpp
mps_voxels/src/mps_voxels/planning/: Action.cpp  MotionPlanner.cpp  State.cpp
mps_voxels/src/mps_voxels/util/: VoronoiTessellator.cpp  geometry.cpp  samplers.cpp
mps_voxels/src/mps_voxels/visualization/: dispersed_colormap.cpp  visualize_bounding_spheres.cpp  visualize_object.cpp  visualize_occupancy.cpp  visualize_voxel_region.cpp
mps_voxels/test/: config.yaml  generate_distance_matrix.cpp  test_voxel_recombination.cpp  test_voxel_segmentation.cpp
scripts/: histogram_matching.py  (+2 more)
(+242 files in other folders)
